--- a/css/index.css
+++ b/css/index.css
@@ -1,22 +1,22 @@
 header {
     display: flex;
     justify-content: space-between;
-    background-color: blue;
-    border-bottom: 10px solid black;
+    background-color: #0000ff;
+    border-bottom: 10px solid #000;
     padding: 10px 20px;
 }
 
 nav {
-    background-color: blue;
+    background-color: #0000ff;
     text-align: right;
 }
 
 a {
     display: inline-flex;
     align-items: center;
-    color:white;
+    color:#fff;
     font-size: 20px;
-    font-family: "Fira Sans","Fira Code";
+    font-family: "Fira Sans","Fira Code" "Press Start 2P";
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
@@ -24,7 +24,7 @@ a {
 
 a::before {
     content: "";
-    background-color: gold;
+    background-color: #ffd700;
     width: 10px;
     height: 10px;
     margin-right: 10px;
@@ -32,14 +32,14 @@ a::before {
 
 #button {
     display: inline-block;
-    background-color: cornflowerblue;
+    background-color: #6495ed;
     padding: 18px 20px;
-    box-shadow: 5px 5px 0px black;
+    box-shadow: 5px 5px 0px #000;
     margin-right: 0;
     transition: transform 120ms linear;
 }
 
 #button:hover {
-    background-color: red;
+    background-color: #ff0000;
     transform: scale(1.1);
 }
