--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ a {
     align-items: center;
     color:#fff;
     font-size: 20px;
-    font-family: 'Fire Code', sans-serif;
+    font-family: 'Fira Code', sans-serif;
     font-weight: 500;
     text-decoration: none;
     margin-right: 30px;
