Create new components

--- a/css/components/action.css
+++ b/css/components/action.css
@@ -11,7 +11,7 @@
 
 .action::before {
     content: "";
-    background-color: #ffd700;
+    background-color: #3A4042;
     width: 10px;
     height: 10px;
     margin-right: 10px;
