--- a/css/components/subtitle.css
+++ b/css/components/subtitle.css
@@ -1,6 +1,6 @@
 .subtitle {
     font-family: 'Press Start 2P', sans-serif;
     font-size: 30px;
-    color: #ff0000;
+    color: #fff;
     text-shadow: 4px 4px 0 #000;
 }
