--- a/css/components/title.css
+++ b/css/components/title.css
@@ -1,6 +1,6 @@
 .title {
     font-family: 'Press Start 2P', sans-serif;
     font-size: 40px;
-    color: #6495ed;
+    color: #fff;
     text-shadow: 5px 5px 0 #000;
 }
