--- a/css/components/title.css
+++ b/css/components/title.css
@@ -4,3 +4,9 @@
     color: #fff;
     text-shadow: 5px 5px 0 #000;
 }
+
+.title.-second {
+    color: #fff;
+    text-shadow: none;
+    text-align: center;
+}
