Create the node-card component

--- a/css/components/card-project.css
+++ b/css/components/card-project.css
@@ -5,7 +5,7 @@
     background-color: #7C5E99;
     width: 280px;
     height: 280px;
-    box-shadow: 10px 10px #fff;
+    box-shadow: 10px 10px #000;
 }
 
 .card-project.-blue {
