--- a/css/components/main-section.css
+++ b/css/components/main-section.css
@@ -9,8 +9,8 @@
     margin-bottom: 60px;
 }
 
-.main-section.-bgBlack {
-    background-color: #000;
+.main-section.-bgMagenta {
+    background-color: #ff00ff;
 }
 
 .main-section.-bdFirst {
